Fixed camera boundaries, configurable currency.
You can now pay your bills on whores! Or bananas. Or marmelade.

--- a/conf/game.cfg
+++ b/conf/game.cfg
@@ -1,4 +1,6 @@
 graphicswidth = 1600 #testing out comments; like this
 graphicsheight = 900 ;You can also use this to comment
+graphicsdepth = 32
 windowed = 1	;Like a twitter whore #test
 antialiasing = 16 ;Test!
+currency = CHF
